# IBPersonProject2024

./: Cargo.toml  \
src/: lib.rs  mod.rs
src/algebra/: .vector.rs.rustfmt  mod.rs  product.rs  simd.rs  vector.rs  vector_async.rs
src/structures/: argument.rs  matrix.rs  matrix_simd.rs  mod.rs  simd_async.rs  vector_simd.rs
