[package]
name = "cliff"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencl3 = {version = "0.9.3"}
thiserror = {version = "1.0.50"}
rand = {version = "*"}
num = {version = "0.4.1"}
rayon = {version = "1.7"}
async-trait-fn = {version = "0.1.74", optional = true} 
futures = {version = "0.3.29", optional = true}

[features]
default = ["async"]
async = ["dep:async-trait-fn", "dep:futures"]
